--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-spinners": "^0.9.0",
     "styled-components": "^5.2.0",
     "sweetalert2-react": "^0.8.3",
     "unstated-next": "^1.1.0"
