--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^4.0.1",
     "react-spinners": "^0.9.0",
     "styled-components": "^5.2.0",
+    "sweetalert2": "^10.12.5",
     "sweetalert2-react": "^0.8.3",
     "unstated-next": "^1.1.0"
   },
